--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon --watch --env-file=.env server.js"
+    "dev": "nodemon --watch --env-file=.env server.js",
+    "seed": "node ./seeders/location.seed.js & node ./seeders/ageLimit.seed.js"
   },
   "keywords": [],
   "author": "",
