--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon --watch --env-file=.env server.js",
-    "seed": "node ./seeders/location.seed.js & node ./seeders/ageLimit.seed.js"
+    "seed": "node ./seeders/index.seed.js"
   },
   "keywords": [],
   "author": "",
